# siz

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: beta-unittests.yml  binary-size.yml  fmt.yml  lint.yml  msrv.yml  nightly-unittests.yml  stable-unittests.yml
benches/: siz_benches.rs
src/: main.rs
src/lib/: args.rs  format.rs  fuzzy.rs  lib.rs  stdstreams.rs  types.rs  types_default.rs  walk.rs
