[package]
name = "size"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Chris Simpkins <chris@sourcefoundry.org>"]
description = """
TODO
"""
documentation = "https://github.com/chrissimpkins/size"
homepage = "https://github.com/chrissimpkins/size"
repository = "https://github.com/chrissimpkins/size"

[[bin]]
bench = false
path = "src/main.rs"
name = "siz"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4", features = ["derive"] }
humansize = "2.0"
ignore = "0.4"
rayon = "1.8"
