[package]
name = "siz"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Chris Simpkins <chris@sourcefoundry.org>"]
description = """
A customizable Rust command line file size reporting executable with support for recursive traversal of file systems.
"""
documentation = "https://github.com/chrissimpkins/siz"
homepage = "https://github.com/chrissimpkins/siz"
repository = "https://github.com/chrissimpkins/siz"
readme = "README.md"
rust-version = "1.70.0"
keywords = ["file", "size", "commandline", "executable"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "siz"
path = "src/main.rs"

[lib]
name = "siz"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
humansize = "2.0"
ignore = "0.4"
rayon = "1.8"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.2.0"
