[package]
name = "siz"
version = "0.4.1-alpha.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Chris Simpkins <chris@sourcefoundry.org>"]
description = """
A versatile, cross-platform command line file size reporting executable with default recursive file system traversal.
"""
documentation = "https://github.com/chrissimpkins/siz"
homepage = "https://github.com/chrissimpkins/siz"
repository = "https://github.com/chrissimpkins/siz"
readme = "README.md"
rust-version = "1.70.0"
keywords = ["file", "size", "commandline", "executable"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "siz"
path = "src/main.rs"

[lib]
name = "siz"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
colored = "2.1"
humansize = "2.0"
ignore = "0.4"
rayon = "1.8"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
pretty_assertions = "1.4"
tempfile = "3.10.1"

[[bench]]
name = "siz_benches"
harness = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
panic = "abort"
incremental = false
